Alignment fixes

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h5 {
 }
 
 p {
-    font-weight: 100;
+    font-weight: 300;
 }
 
 
@@ -232,6 +232,7 @@ p {
 
 .RahilShah{
     width: 60%;
+    margin-left: -7px;
 }
 
 .landingL{
